--- a/screens/main_screen/main_screen.kv
+++ b/screens/main_screen/main_screen.kv
@@ -14,9 +14,11 @@
         #    md_bg_color: [.2, .2, .2, 1]
 
         MDLabel:
-            text: 'AutoHWApp'
+            id: title_label
+            text: 'AutoHW'
             halign: 'center'
-            font_size: 25
+            font_size: dp(25)
+            # font_style: 'H5'
             bold: True
             pos_hint: {'center_x': 0.5, 'center_y': 0.8}
         
@@ -32,6 +34,7 @@
             text_color: [1, 1, 1, 1]
             pos_hint: {'center_x': 0.5, 'center_y': 0.55}
             size_hint_x: .8
+            size_hint_y: 0.07 # NOVO
             on_release: root.show_accs() #root.printar() #
                     
         #MDRectangleFlatIconButton:
@@ -61,10 +64,43 @@
             text: 'Show Logs'
             text_color: [0, 0, 0, 0.7]
             md_bg_color: [0.88, 0.8, 0.56, 1]
-            pos_hint: {'center_x': 0.5, 'center_y': 0.3}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.4}
             icon: 'text-box-outline'
             size_hint_x: .8
+            size_hint_y: 0.07
             on_release: root.go_to_logs()
+                    
+        MDFillRoundFlatIconButton:
+            id: run_btn
+            text: 'Run Automation'
+            text_color: [0, 0, 0, 1]
+            md_bg_color: [0.85, 0.85, 0.85, 0.9]
+            pos_hint: {'center_x': 0.5, 'center_y': 0.25}
+            icon: 'play'
+            size_hint_x: .8
+            size_hint_y: 0.07
+            on_release: root.go_to_automation()
+                    
+        MDFillRoundFlatIconButton:
+            id: sleep_btn
+            text: 'Hibernate PC'
+            text_color: [1, 1, 1, 1]
+            md_bg_color: [0.16, 0.3, 0.65, 1] #"#1C335C"
+            pos_hint: {'center_x': 0.5, 'center_y': 0.1}
+            icon: 'sleep'
+            icon_color: [1, 1, 1, 1]
+            size_hint_x: .8
+            size_hint_y: 0.07
+            on_release: root.hibernar_pc("Hibernar")
+                    
+        MDLabel:
+            id: running_label
+            text: ''
+            theme_text_color: "Custom"
+            text_color: [0, 0, 0, 0.5]
+            pos_hint: {'center_x': 0.5, 'center_y': 0.95}
+            halign: "center"
+            font_style: 'Subtitle2'
 
         # ScrollView:
         #     pos_hint: {'center_x': 0.52, 'top': 0.75}
