build: Implementing async functions on the kv buttons

--- a/screens/logs_screen/logs_screen.kv
+++ b/screens/logs_screen/logs_screen.kv
@@ -363,5 +363,5 @@
         text_color: root.cor_do_icone
         font_size: sp(30)
         size_hint: None, None
-        size: self.texture_size
+        size: self.texture_size #
 
