style: Cleaning useless comments from the code

--- a/screens/main_screen/main_screen.kv
+++ b/screens/main_screen/main_screen.kv
@@ -34,8 +34,8 @@
             text_color: [1, 1, 1, 1]
             pos_hint: {'center_x': 0.5, 'center_y': 0.55}
             size_hint_x: .8
-            size_hint_y: 0.07 # NOVO
-            on_release: root.show_accs() #root.printar() #
+            size_hint_y: 0.07
+            on_release: root.show_accs()
                     
         #MDRectangleFlatIconButton:
         #    text: 'Accounts'
